src/app/administration/user-details/components/user-details.component.scss
.user-details-wrapper {
    // background: #F2F2F2;
    top: 20px;
    position: relative;


    *:focus {
        box-shadow: none !important;
    }

    .save-submit {
        margin-right: 20px;
        margin-left: 20px;
        width: 80px !important;
        font-family: EYInterstate;
        font-style: normal;
        font-weight: normal;
        font-size: 14px;
        line-height: 20px;
        text-align: center;
        // color: #2E2E38 !important;
        // border: 0px;
    }

    /* .save-submit:hover {
       color: var(--btn-primary-color);
    } */

    button.motif-button.save-submit.dis-button:hover {
        background-color: var(--btn-primary-disabled-bg-color) !important;
    }
    
    .btn_close {
        width: 80px !important;
        font-family: EYInterstate;
        font-style: normal;
        font-weight: normal;
        font-size: 14px;
        line-height: 20px;
        text-align: center;
        // color: #2E2E38 !important;
        // border: 0.5px solid #2E2E38 !important;

    }
    // .btn_close:hover {
    //     background-color: var(--btn-secondary-bg-color);
    // }
}
.back-wrapper {
    /* display: flex;
    motif-icon.motif-icon {
        cursor: pointer;
    } */
    display: flex;
    margin-bottom: 8px;
    h2 {
        color: #1A1A24;
        margin-left: 17px;
    }  
}
.back-button {
    ::ng-deep svg {
        background-color: #e1e1e6;
        cursor: pointer;
        fill: #747480 !important;
    }
}

.back-button:hover {
    ::ng-deep svg {
        background-color: #2e2e3c;
        cursor: pointer;
        fill: #ffffff !important;
    }
}

.back-opt {
font-family: EYInterstate;
font-style: normal;
font-weight: 300;
font-size: 14px;
line-height: 16px;
color: #2E2E3C;
top: 4px;
position: relative;
left: 3px;
// cursor: pointer;
}
h3 {
font-family: EYInterstate;
font-style: normal;
font-weight: bold;
font-size: 32px;
line-height: 48px;
color: #1A1A24;
margin-right: 40px;
}
.user-info-header {
    display: flex;
    margin-top: 15px;
    margin-bottom: 20px;
}

motif-icon.motif-icon.user-edit {
    top: 13px;
    position: relative;
    left: 10px;
    cursor: pointer;
} 
.user-info-header span{
    top: 2px;
    left: 30px;
    font-family: EYInterstate;
    font-style: normal;
    font-weight: bold;
    font-size: 14px;
    line-height: 22px;
    color: #155CB4;
    position: absolute;
    cursor: pointer;
}

.user-thumb {
    display: flex;

    span {
        font-family: EYInterstate;
        font-style: normal;
        font-weight: normal;
        font-size: 32px;
        line-height: 38px;
        color: #1A1A24;
        margin-top: 20px;
        margin-left: 15px
    }
}

.edit-form {
    display: flex;
    position: absolute;
    left: 150px;
    margin-top: 3px;
}



.user-content-container {
    // background: #FFFFFF;
    margin-top: 30px;

        .row {
            margin-left: 0px !important;
            padding: 30px;
            font-family: EYInterstate;
            font-style: normal;
            font-weight: 300;
            font-size: 12px;
            line-height: 22px;
            color: #2E2E38;
            background-color: #FFFFFF;
        }
        .cust-col-colour {
            // background: #F6F6FA;
            margin-right: -50px;
        }

        /* .offset-md-1 {
            padding-bottom: 5px;
        } */
        .cust-row-st {
                font-family: EYInterstate;
                font-style: normal;
                font-weight: normal;
                font-size: 16px;
                line-height: 25px;
                display: flex;
                align-items: center;
                color: #6F6F7A;
                margin-top: -5px;
        }

        .col-md-6 , .col-md-5, .col-md-8 {
            background: #F6F6FA;
            padding-right: 0px;
        }

        ::ng-deep {

            .motif-input {
                padding: 0px !important;
                font-family: EYInterstate !important;
                font-style: normal !important;
                font-weight: 600 !important;
                font-size: 16px !important;
                line-height: 25px !important;
                color: #2E2E38 !important;
                }
                .motif-form-field {
                    width: 100% !important;
                    margin-bottom: 0px !important;
                }
                .motif-form-field.motif-form-field-error.motif-focus {
                    margin-bottom: 0px !important;
                    border-bottom: 0px !important;
                }
                .motif-form-field .motif-input {
                    background-color: transparent !important;
                    border-bottom: 1px solid #2E2E38 !important;
                }
                .motif-avatar.motif-avatar.user-thumb-icon.size-large.status-online span{
                    background: transparent !important;
                    font-family: EYInterstate !important;
                    color: #2E2E38 !important;
                    // display: none !important;
                }
                .motif-avatar.motif-avatar.user-thumb-icon.size-large.status-online{
                    border-color: #2E2E38 !important;
                    height: 75px !important;
                    width: 75px !important;
                }
        }
     
}

::ng-deep {
    .motif-icon.motif-icon.user-edit svg {
        fill: #155CB4 !important;
    }
    .motif-toast {
        // width: 30%;
        position: fixed;
        right: 0px;
        margin-right: 2%;
        top: 50px;
        z-index: 2;
        .motif-toast-content {
            font-family: EYInterstate
        }
        .motif-button {
            color: #1a1a24;
        }
        .motif-icon-button {
            display: none !important;
        }
    }
    .motif-avatar.motif-avatar.user-thumb-icon.size-large.status-online{
        height: 75px !important;
        width: 75px !important;
    }
}

.disabled {
  pointer-events: none;
  opacity: 0.6
}



    

